PR/54513 ifconfig exits on newly created carp interfaces downgrade from err(EXIT_FAILURE, ... ) to warn() if ioctl(SIOCGLIFADDR) fails. ifconfig now survives freshly created carp interfaces.